refactor: evoluir pipeline de áudio com Kafka, Circuit Breaker e Polling Reativo
- Adicionada resiliência com @CircuitBreaker (Resilience4j) na integração com o Gemini.
- Substituído parser manual de string por desserialização tipada com Jackson (Records).
- Implementada arquitetura orientada a eventos com BudgetKafkaConsumer.
- Refatorada a infraestrutura para suportar carregamento nativo de `.env` e métricas do Prometheus.
- Adicionada demonstração prática do Princípio de Inversão de Dependência (DIP) em Java.
- Adicionada máquina de estado selada (Sealed Class) e rotinas utilitárias em Kotlin.
- Frontend atualizado com suporte a reprocessamento via aba "Servidor" e estratégia de Polling Reativo.
- Removido arquivo de teste binário estático `audio_real_100.mp3`.